--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Compiled class file
+# ===========================================
+# Java / Spring Boot Backend
+# ===========================================
+
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
+logs/
 
 # BlueJ files
 *.ctxt
@@ -10,7 +15,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.nar
@@ -19,6 +24,308 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs
 hs_err_pid*
 replay_pid*
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Gradle
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# Spring Boot
+*.pid
+spring.log
+*.trace
+
+# ===========================================
+# Node.js / React Frontend
+# ===========================================
+
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+.cache/
+.parcel-cache/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+.coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Vite
+.vite/
+
+# ===========================================
+# Environment and Configuration
+# ===========================================
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# Configuration files with secrets
+application-dev.yml
+application-prod.yml
+application-local.yml
+*-secrets.yml
+*-secrets.yaml
+
+# ===========================================
+# IDE and Editor Files
+# ===========================================
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+.idea_modules/
+
+# Visual Studio Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Eclipse
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.classpath
+.factorypath
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# ===========================================
+# Operating System Files
+# ===========================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ===========================================
+# Database and Cache
+# ===========================================
+
+# H2 Database files
+*.h2.db
+*.h2.mv.db
+*.h2.trace.db
+
+# SQLite
+*.sqlite
+*.sqlite3
+*.db
+
+# Redis
+dump.rdb
+
+# ===========================================
+# Docker and DevOps
+# ===========================================
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+docker-compose.local.yml
+
+# Kubernetes
+*.kubeconfig
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# ===========================================
+# Testing and Coverage
+# ===========================================
+
+# Test results
+TEST-*.xml
+junit.xml
+test-results/
+test-reports/
+
+# Coverage reports
+jacoco.exec
+.sonar/
+
+# ===========================================
+# Documentation and Temporary Files
+# ===========================================
+
+# Generated documentation
+docs/generated/
+javadoc/
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Backup files
+*.backup
+*.bak
+
+# Archive files (unless specifically needed)
+*.7z
+*.dmg
+*.gz
+*.iso
+*.tar
+*.tgz
+*.rar
+
+# ===========================================
+# Security and Sensitive Data
+# ===========================================
+
+# SSH keys
+id_rsa
+id_ed25519
+*.pem
+*.key
+
+# SSL certificates
+*.crt
+*.cer
+*.p12
+*.pfx
+
+# API keys and secrets
+.secrets
+secrets.txt
+*.secret
+
+# ===========================================
+# Custom Project Specific
+# ===========================================
+
+# Application logs
+application.log
+application-*.log
+
+# Upload directories
+uploads/
+files/
+
+# Generated assets
+generated/
