--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,35 +14,36 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "antd": "^5.12.8",
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
+    "antd": "^5.12.8",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
-    "recharts": "^2.8.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^24.6.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^23.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vitest": "^1.0.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "jsdom": "^23.0.1"
+    "vitest": "^1.0.4"
   },
   "browserslist": {
     "production": [
