--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -36,6 +36,6 @@
       "@assets/*": ["./src/assets/*"]
     }
   },
-  "include": ["src", "vite.config.ts"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
