--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -127,6 +127,9 @@ jobs:
   security-scan:
     runs-on: ubuntu-latest
     needs: [backend-test, frontend-test]
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
     - name: Checkout code
