--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.10</version> <!-- ⬆️ Updated from 3.2.0 (fixes multiple CVEs) -->
         <relativePath/>
     </parent>
 
@@ -20,8 +20,13 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring-doc.version>2.3.0</spring-doc.version>
-        <testcontainers.version>1.19.3</testcontainers.version>
+        <spring-doc.version>2.6.0</spring-doc.version> <!-- ⬆️ Updated from 2.3.0 -->
+        <testcontainers.version>1.20.4</testcontainers.version> <!-- ⬆️ Updated from 1.19.3 -->
+        <spring-security.version>6.2.7</spring-security.version>
+        <postgresql.version>42.7.4</postgresql.version> <!-- ⬆️ Updated from 42.6.1 (security patches) -->
+        <tomcat.version>10.1.34</tomcat.version>
+        <flyway.version>10.21.0</flyway.version> <!-- ✨ Added explicit version -->
+        <lombok.version>1.18.36</lombok.version> <!-- ⬆️ Updated from 1.18.32 -->
     </properties>
 
     <dependencies>
@@ -60,6 +65,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -68,23 +74,30 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+        
+        <!-- ✨ Flyway PostgreSQL support -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
 
         <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.12.3</version>
+            <version>0.12.6</version> <!-- ⬆️ Updated from 0.12.3 -->
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.12.3</version>
+            <version>0.12.6</version> <!-- ⬆️ Updated from 0.12.3 -->
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.12.3</version>
+            <version>0.12.6</version> <!-- ⬆️ Updated from 0.12.3 -->
             <scope>runtime</scope>
         </dependency>
 
@@ -146,7 +159,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
@@ -177,7 +190,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.32</version>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
@@ -190,7 +203,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version>
+                <version>0.8.12</version> <!-- ⬆️ Updated from 0.8.11 -->
                 <executions>
                     <execution>
                         <goals>
@@ -210,7 +223,7 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
-                <version>9.22.3</version>
+                <version>${flyway.version}</version>
             </plugin>
         </plugins>
     </build>
